--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/topLayout"
                 app:layout_constraintRight_toRightOf="@id/topLayout"
+                android:textColor="@android:color/white"
                 android:text="כמות הדקות שרכבת ישראל עיכבה אותנו"
                 android:fontFamily="@font/levenim_mt"
                 android:textSize="19sp"
@@ -62,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="0dp"
             android:layout_marginStart="0dp"
-            android:visibility="gone"
+            android:visibility="visible"
             android:background="?android:attr/windowBackground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
