--- a/app/src/main/res/layout/fragment_complaints.xml
+++ b/app/src/main/res/layout/fragment_complaints.xml
@@ -1,14 +1,47 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:background="@android:color/white"
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@android:color/white"
+        android:layout_height="match_parent"
+        tools:context="com.improve.latetrain.ComplaintsFragment">
 
-             android:layout_height="match_parent"
-             tools:context="com.improve.latetrain.ComplaintsFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/send_btn"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+    />
 
-</FrameLayout>
+    <EditText
+            android:id="@+id/write_et"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/send_btn"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/send_btn"
+            app:layout_constraintTop_toTopOf="@+id/send_btn"
+            android:background="@drawable/message_bg"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="16dp"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:textColorHint="@android:color/white"
+            android:hint="הקלד כאן"
+            android:maxHeight="200dp"
+    />
+    <Button
+            android:id="@+id/send_btn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/send_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+    />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
