--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
+    <item
+            android:id="@+id/menu_item_share"
+            app:showAsAction="always"
+            android:title="Share"
+            android:icon="@drawable/ic_share_black_24dp"
+            app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
+    />
 </menu>
