--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,10 +4,12 @@
         android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@android:color/white"
         android:layout_height="match_parent"
-        tools:context="com.improve.latetrain.ComplaintsFragment">
+        tools:context="com.improve.latetrain.ChatFragment">
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -21,18 +23,19 @@
             android:id="@+id/write_et"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/send_btn"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toRightOf="@id/send_btn"
-            app:layout_constraintTop_toTopOf="@+id/send_btn"
-            android:background="@drawable/message_bg"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="16dp"
-            android:textColor="@android:color/white"
+            android:background="@drawable/message_bg_white_orange_stroke"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="16dp"
+            android:textColor="#ECBA42"
             android:textSize="20sp"
-            android:textColorHint="@android:color/white"
-            android:hint="הקלד כאן"
-            android:maxHeight="200dp"
+            android:textColorHint="#F5D587"
+            android:hint="@string/type_here_chat"
+            android:fontFamily="@font/comixno2_medium"
+            tools:text="jhgjhgjhgjhgjhasidhaksjhdjashdkjhasdkjhaskjhdkjashdjhasdjhkasjdhajkshdkjashdkjashdjakshdkjahsdjashdkjhaskjdhaskjdhajkshdkjashdjkashdjkahsdkjasjdhajksdakjshdkjahsdjhaksjdhjkahsdjaskjhdjasjdhajshdjhasjdhkajhsdjkahsdkjahskjdhakjshdjahsd"
     />
     <Button
             android:id="@+id/send_btn"
