--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -4,8 +4,8 @@
     <item
             android:id="@+id/menu_item_share"
             app:showAsAction="always"
-            android:title="Share"
-            android:icon="@drawable/ic_share_black_24dp"
-            app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
+            android:title="@string/share_text_btn_drawer"
+            android:icon="@drawable/ic_share_white_24dp"
+
     />
 </menu>
