--- a/app/src/main/res/layout/message_layout_right.xml
+++ b/app/src/main/res/layout/message_layout_right.xml
@@ -6,10 +6,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="80dp"
-        android:id="@+id/message_constraint_holder"
->
-
-
+        android:id="@+id/message_constraint_holder">
 
     <TextView
             app:layout_constraintTop_toTopOf="parent"
@@ -25,6 +22,5 @@
             android:textSize="20sp"
             android:textColor="@android:color/white"
     />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
