--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,16 +4,16 @@
     <item
             android:id="@+id/navigation_add_mins"
             android:icon="@drawable/ic_report_black_24dp"
-            android:title="דווח"/>
+            android:title="@string/report_bottom_nav"/>
     <item
             android:id="@+id/navigation_complaints"
             android:icon="@drawable/ic_chat_black_24dp"
-            android:title="תלונות"/>
+            android:title="@string/complain_bottom_nav"/>
 
     <item
             android:id="@+id/navigation_history"
             android:icon="@drawable/ic_photo_black_24dp"
-            android:title="תמונות"/>
+            android:title="@string/pictures_bottom_nav"/>
 
 
 
