--- a/app/src/main/res/layout/fragment_add_mins.xml
+++ b/app/src/main/res/layout/fragment_add_mins.xml
@@ -132,18 +132,6 @@
             android:gravity="start"
 
     />
-    <Spinner
-            android:id="@+id/currentStationSp"
-            android:background="@drawable/scroll_arrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@+id/your_location_tv"
-            app:layout_constraintBottom_toBottomOf="@id/your_location_tv"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="30dp"
-            android:gravity="start"
-
-    />
     <TextView
             android:id="@+id/current_station_location_fam"
             android:layout_width="wrap_content"
@@ -156,8 +144,8 @@
             android:textColor="@android:color/black"
             android:fontFamily="@font/comixno2_medium"
             android:textSize="18sp"
-            tools:text="test test"
-            android:visibility="gone"
+            android:text="@string/not_in_train_station_addmins"
+            android:visibility="visible"
     />
 
     <com.airbnb.lottie.LottieAnimationView
@@ -183,6 +171,21 @@
             android:textColor="@android:color/white"
             android:text="@string/report_add_mins"
             android:fontFamily="@font/comixno2_medium"
+            android:visibility="visible"
+            android:textSize="24sp"/>
+    <Button
+            android:id="@+id/addPermission"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            app:layout_constraintRight_toRightOf="@id/animation_layout"
+            app:layout_constraintLeft_toLeftOf="@id/animation_layout"
+            app:layout_constraintBottom_toBottomOf="@id/animation_layout"
+            app:layout_constraintTop_toTopOf="@id/animation_layout"
+            android:background="@drawable/round_shape"
+            android:textColor="@android:color/white"
+            android:text="@string/use_location_add_mins"
+            android:fontFamily="@font/comixno2_medium"
+            android:visibility="gone"
             android:textSize="24sp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
