--- a/app/src/main/res/layout/fragment_pictures_gallery.xml
+++ b/app/src/main/res/layout/fragment_pictures_gallery.xml
@@ -21,6 +21,7 @@
             app:layout_constraintRight_toRightOf="parent"
             android:src="@drawable/ic_photo_camera_black_24dp"
             android:layout_marginBottom="16dp"
+            android:tooltipText="@string/help_prove_train_late"
     />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
