refactoring and minor changes

--- a/app/src/main/res/layout/fragment_add_mins.xml
+++ b/app/src/main/res/layout/fragment_add_mins.xml
@@ -5,7 +5,7 @@
         android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.improve.latetrain.AddMinsFragment">
+        tools:context="com.improve.latetrain.fragments.AddMinsFragment">
 
 
 
