--- a/app/src/main/res/layout/fragment_write_us.xml
+++ b/app/src/main/res/layout/fragment_write_us.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="#3880EC"
-        tools:context=".WriteUsFragment">
+        tools:context=".fragments.WriteUsFragment">
 
     <TextView
             android:layout_marginTop="8dp"
