Add History feature!

--- a/app/src/main/res/layout/fragment_add_mins.xml
+++ b/app/src/main/res/layout/fragment_add_mins.xml
@@ -39,7 +39,7 @@
             android:gravity="start"
             android:textSize="20sp"
             android:layout_marginRight="30dp"
-            android:textColor="#e6a430"
+            android:textColor="@color/colorAccent"
             android:fontFamily="@font/comixno2_medium"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -64,7 +64,7 @@
             android:text="@string/where_will_you_go_add_mins"
             android:textSize="20sp"
             android:layout_marginRight="30dp"
-            android:textColor="#e6a430"
+            android:textColor="@color/colorAccent"
             android:fontFamily="@font/comixno2_medium"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -90,7 +90,7 @@
             android:text="@string/time_late_minutes_add_mins"
             android:layout_marginRight="30dp"
             android:textSize="20sp"
-            android:textColor="#e6a430"
+            android:textColor="@color/colorAccent"
             android:fontFamily="@font/comixno2_medium"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
