--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,9 +11,13 @@
             android:title="@string/complain_bottom_nav"/>
 
     <item
-            android:id="@+id/navigation_history"
+            android:id="@+id/navigation_gallery"
             android:icon="@drawable/ic_photo_black_24dp"
             android:title="@string/pictures_bottom_nav"/>
+    <item
+            android:id="@+id/navigation_history"
+            android:icon="@drawable/ic_history_black_24dp"
+            android:title="@string/history_bottom_nav"/>
 
 
 
