--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -26,7 +26,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toRightOf="@id/send_btn"
-            android:background="@drawable/message_bg_white_orange_stroke"
+            android:background="@drawable/message_bg_blue_line"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="16dp"
@@ -37,12 +37,13 @@
             android:fontFamily="@font/comixno2_medium"
             tools:text="jhgjhgjhgjhgjhasidhaksjhdjashdkjhasdkjhaskjhdkjashdjhasdjhkasjdhajkshdkjashdkjashdjakshdkjahsdjashdkjhaskjdhaskjdhajkshdkjashdjkashdjkahsdkjasjdhajksdakjshdkjahsdjhaksjdhjkahsdjaskjhdjasjdhajshdjhasjdhkajhsdjkahsdkjahskjdhakjshdjahsd"
     />
-    <Button
+    <ImageView
             android:id="@+id/send_btn"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="16dp"
-            android:background="@drawable/send_button"
+            android:background="@drawable/send_shape"
+            android:src="@drawable/ic_arrow_toleft_white_32dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:tooltipText="@string/take_out_frustration"
