changed button position on ChatFragment, contactUs fixed, location improve request loop fixed, drawable v24 moved to drawable directory - prevent crashes.

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -35,7 +35,7 @@
             android:textColorHint="#F5D587"
             android:hint="@string/type_here_chat"
             android:fontFamily="@font/comixno2_medium"
-    />
+            android:inputType="text"/>
     <ImageView
             android:id="@+id/send_btn"
             android:layout_width="45dp"
