--- a/app/src/main/res/layout/fragment_add_mins.xml
+++ b/app/src/main/res/layout/fragment_add_mins.xml
@@ -97,6 +97,7 @@
             android:gravity="start"
     />
     <View
+            android:id="@+id/last_line_fam"
             android:layout_width="0dp"
             android:layout_height="1dp"
             app:layout_constraintTop_toBottomOf="@+id/late_minutes_tv"
@@ -156,6 +157,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:lottie_rawRes="@raw/animation2"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/last_line_fam"
             app:lottie_repeatMode="restart"
             app:lottie_loop="true"/>
 
