--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -26,24 +26,28 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toRightOf="@id/send_btn"
-            android:background="@drawable/message_bg_blue_line"
-            android:layout_marginEnd="8dp"
+            android:background="@drawable/text_sender_bg"
+            android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="16dp"
-            android:textColor="#ECBA42"
+            android:padding="8dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:textColor="@color/colorPrimary"
             android:textSize="20sp"
-            android:textColorHint="#F5D587"
+            android:textColorHint="#7EB2F5"
             android:hint="@string/type_here_chat"
             android:fontFamily="@font/comixno2_medium"
-            android:inputType="text"/>
+            android:inputType="textMultiLine"/>
     <ImageView
             android:id="@+id/send_btn"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_margin="16dp"
             android:background="@drawable/send_shape"
             android:src="@drawable/ic_arrow_back_white_24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/write_et"
+            app:layout_constraintBottom_toBottomOf="@+id/write_et"
             app:layout_constraintLeft_toLeftOf="parent"
             android:tooltipText="@string/take_out_frustration"
     />
