--- a/app/src/main/res/layout/message_layout_left.xml
+++ b/app/src/main/res/layout/message_layout_left.xml
@@ -18,11 +18,16 @@
             android:gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="s"
-            android:background="@drawable/message_bg"
+            tools:text="hello! what is your name?"
+            android:background="@drawable/message_bg_left"
             android:fontFamily="@font/comixno2_medium"
             android:textSize="20sp"
             android:textColor="@android:color/white"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="4dp"
+            android:layout_marginTop="8dp"
     />
 
 
